Fixed landscape scanning security csv